applications/todo-redhat/overlays/qa/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-redhat

spec:
  replicas: 2
