applications/todo-redhat/overlays/qa/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-redhat

spec:
  host: todo-qa.hclareth.space
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect

    externalCertificate:
      name: todo-redhat-qa-tls
